# minimatrix

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  setup.py
matrixa/: __init__.py
matrixa/applications/: __init__.py  graphics.py
matrixa/matrix/: __init__.py  _bootstrap.py  arithmetic.py  core.py  linalg.py  utils.py
minimatrix/: __init__.py
minimatrix/applications/: __init__.py  graphics.py
minimatrix/matrix/: __init__.py  _bootstrap.py  arithmetic.py  core.py  linalg.py  utils.py
tests/: __init__.py  test_matrix.py
